# RTM_V2

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
backend/src/: server.ts
docs/: BACKEND_PRD.md
scraper_api/: pyproject.toml  start.sh
scraper_api/app/: config.py  main.py
scraper_api/app/models/: schemas.py
scraper_api/app/routers/: rules.py  scrape.py
scraper_api/app/services/: cleaner.py  db.py  scraper.py
scraper_api/app/sources/: __init__.py  base.py  common.py  freewebnovel.py  novelbin.py  novelfull.py  novellunar.py  registry.py
src/: App.tsx  index.css  theme.ts
src/components/: DebugOverlay.tsx  ErrorBoundary.tsx  PlaybackControls.tsx  ReadingPane.tsx  SettingsDrawer.tsx  TextInput.tsx
src/context/: AuthContext.tsx  authContextDef.ts
src/hooks/: useAuth.ts  useAutoMount.ts  useChapterLoader.ts  useFilteredBooks.ts  useListenOfflineJob.ts  useLocalStorage.ts  useMediaSession.ts  useProgressSaver.ts  useReaderSettings.ts  useReadingContext.ts  useServerTTS.ts  useTTS.ts  useVoices.ts  useWakeLock.ts
src/pages/: ChapterEditorPage.tsx  LibraryPage.tsx  LoginPage.tsx  ReaderPage.tsx  ScraperPage.tsx
src/providers/: AppProviders.tsx
src/router/: AppRouter.tsx
src/services/: api.ts  bookService.ts  chapterService.ts  listenJobService.ts  listenPlaybackPosition.ts  offlineAudioLibrary.ts  scraperService.ts  ttsChunkCache.ts  ttsService.ts
src/types/: models.ts
src/utils/: audioDownload.ts  audioPlayback.ts  (+3 more)
(+48 files in other folders)
